fix(dialog title): Fixed spacing

--- a/src/dialog/evm/evm-operation/evm-operation.scss
+++ b/src/dialog/evm/evm-operation/evm-operation.scss
@@ -63,6 +63,7 @@
         text-align: center;
         font-size: 20px;
         text-transform: capitalize;
+        padding-bottom: 8px;
       }
 
       .account-chain-panel {
